# stock-market-analyzer

./: .gitignore  CLAUDE_DESKTOP_SETUP.md  MCP_SETUP.md  NEWS_FILTERING_UPDATE.md  QUICK_START.md  README.md  WORKFLOW_DIAGRAM.md  analyzer.py  config.py  dashboard.py  data_sources.py  main.py  mcp_server.py  news_analyzer.py  news_cli.py  news_sources.py  pyproject.toml  requirements.txt  setup_claude_desktop.sh  standalone_dashboard.html  test_mcp.py  test_new_fields.py  web_dashboard.py
.kiro/settings/: mcp.json
templates/: index.html
